internal/controller/test_data/maximum-atom/expected-output/middleware-downloads-2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: maximum-atom-downloads-2
  namespace: default
  labels:
    test: test
    pdok.nl/app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: maximum
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  replacePathRegex:
    regex: ^(/path|/path/other)/downloads/(file-3.ext|file-4.ext)
    replacement: /container/prefix-3/$1
