internal/controller/test_data/maximum-atom/expected-output/middleware-prefixstrip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: maximum-atom-prefixstrip
  namespace: default
  labels:
    test: test
    pdok.nl/app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: maximum
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  stripPrefix:
    prefixes:
      - /path/
