internal/controller/test_data/maximum-atom/expected-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maximum-atom
  namespace: default
  labels:
    test: test
    pdok.nl/app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: maximum
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  ports:
    - name: atom-service
      port: 80
      protocol: TCP
  selector:
    test: test
    pdok.nl/app: atom-service
